<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/SortBy"
        android:title="@string/sort_by" >
        <menu>
                <item
                    android:id="@+id/Id"
                    android:title="@string/ID" />
                <item
                    android:id="@+id/Name"
                    android:title="@string/Name" />
        </menu>
    </item>>
    <item android:id="@+id/Range"
        android:title="@string/range" >
        <menu>
            <item
                android:id="@+id/r1"
                android:title="1-30" />
            <item
                android:id="@+id/r2"
                android:title="31-60" />
            <item
                android:id="@+id/r3"
                android:title="61-90" />
            <item
            android:id="@+id/r4"
            android:title="91-120" />
            <item
                android:id="@+id/r5"
                android:title="121 to last" />
        </menu>
    </item>>
</menu>